--- a/personal/templates/detalle_cuadrilla.html
+++ b/personal/templates/detalle_cuadrilla.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% load static %}
 {% load custom_tags %}
 {% block extra_css %}
 <link rel="stylesheet" href="{% static 'css/personal.css' %}">
